--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,10 @@ set-window-option -g mode-keys vi
 set-window-option -g utf8 on
 # マウス有効。MacのTerminal.appでは効かず…
 set-option -g mouse-select-pane on
+setw -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
 # 設定リロード
 bind r source-file ~/.tmux.conf
 # vでマーク開始
@@ -20,9 +24,14 @@ bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection
 # Yで行をヤンク
 bind -t vi-copy Y copy-line
-
-# zsh上でのpbcopy/pbpasteのサポート 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
 # C-yでヤンクした内容をクリップボードへ
 bind C-y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+# ウィンドウリストの色を設定する
+setw -g window-status-fg black
+setw -g window-status-bg blue
+setw -g window-status-attr dim
+# アクティブなウィンドウを目立たせる
+setw -g window-status-current-fg white
+setw -g window-status-current-bg red
+setw -g window-status-current-attr bright
