--- a/.gitconfig
+++ b/.gitconfig
@@ -12,5 +12,6 @@
 [alias]
   log-graph = log --graph --date=short --pretty=format:'%Cgreen%h %cd %Cblue%cn %Creset%s'
   log-all = log --graph --all --color --pretty='%x09%h %cn%x09%s %Cred%d%Creset'
+  branch-from = show-branch | grep '*' | grep -v "$(rev-parse --abbrev-ref HEAD)" | head -1 | awk -F'[]~^[]' '{print $2}'
 [http]
-	postBuffer = 10M
+  postBuffer = 10M
