--- a/.gitconfig
+++ b/.gitconfig
@@ -9,6 +9,7 @@
   grep = auto
 [core]
   excludesfile = ~/.gitignore 
+	editor = vim -c \"set fenc=utf-8\"
 [alias]
   log-graph = log --graph --date=short --pretty=format:'%Cgreen%h %cd %Cblue%cn %Creset%s'
   log-all = log --graph --all --color --pretty='%x09%h %cn%x09%s %Cred%d%Creset'
