--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
   name = fuku
-  email = fukuzawa.makoto@nifty.co.jp
+  email = fukuzawa.makoto@fujitsu.com
 [color]
   status = auto
   diff = auto
